Revert "Add logs directory to .gitignore and update dependencies"
This reverts commit e1489cd0d4fddd1f7b760d595e382824c7a38a32.

	modified:   .gitignore
	modified:   src/main/java/discord/worldbosses/ConfigManager.java
	modified:   src/main/java/discord/worldbosses/DotEnv.java
	modified:   src/main/java/discord/worldbosses/SlashCommandRegistrar.java
	renamed:    src/main/resources/logback.xml -> src/main/resources/log4j2.xml

rollback